--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #fefbfb;
+}
 
 /* hero-section */
 .nav-bar{
@@ -62,7 +65,6 @@
     border-radius: 3px;
 }
 
-
 /* hero-section */
 .hero-section{
     background-color: var(--primary_color);
@@ -102,14 +104,39 @@
     font-weight: 700;
     text-align: center;
 }
+.sec-heading div{
+    background-color: var(--extra_1);
+    height: 3px;
+    margin: 0 auto 2px;
+}
+.sec-heading div:first-child{
+    width: 120px;
+}
+/* .sec-heading div:last-child{
+    width: 80px;
+} */
 .abt-content {
     background-color: var(--secondary_color);
     color: var(--extra_3);
     font-family: var(--family2);
+    padding: 10px 0;
+}
+.side1{
+    width: 60%;
+    margin: 20px auto 0;
+}
+.side1 img{
+    object-fit: cover;
+    object-position: center;
 }
 
-
 /* skills */
+.skills .sec-heading div:first-child{
+    width: 80px;
+}
+/* .skills .sec-heading div:last-child{
+    width: 80px;
+} */
 .flexBox{
     display: flex;
     flex-direction: column;
@@ -117,7 +144,7 @@
     justify-content: center;
     align-items: center;
 }
-.tech-stack h3{
+.tech-stack h3, .project h3{
     font-family: var(--family1); 
 }
 .tech{
@@ -127,4 +154,58 @@
     font-size: 25px;
     font-family: var(--family2);
     font-weight: 700;
+}
+
+
+/* Projects */
+.html-project{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.cards{
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    background-color: var(--extra_3);
+    transition: 0.6s ease-in-out;
+}
+.cards:hover{
+    box-shadow: 2px 1px 2px 1px rgb(165, 164, 164);
+}
+.card-img{
+    border-bottom: 1px solid lightgray;
+}
+.card-img img{
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.card-content{
+    padding: 20px 10px;
+}
+.card-content h4{
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+.card-content p{
+    font-size: 1.1rem;
+}
+.btns{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 15px 0
+}
+.btns a{
+    background-color: #3795BD;
+    padding: 10px 15px;
+    color: var(--extra_3);
+    text-decoration: none;
+    border-radius: 3px;
+}
+
+.card-content h4, .card-content p, .btns a{
+    font-family: var(--family2);
 }
