refactor: changed mobile-nav structure

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,9 @@ body{
     padding: 0;
     margin: 0;
 }
+.off-canvas{
+    width: 280px !important;   
+}
 .btn-close{
     background-color: white;
     margin-right: 8px;
