--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,8 @@ body{
         margin: 0;
     }
     .hero-section{
+        background: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.4)), url("../images/hero-image.jpg");
+        background-size: cover;
         padding-bottom: 0 !important;
     }
     .hero-section .flex{
@@ -386,6 +388,7 @@ body{
         height: 300px;
         margin: 0 auto;
         border-radius: 50%;
+        box-shadow: 7px 9px 14px whitesmoke;
     }
     .side1{
         width: 40%;
@@ -398,8 +401,10 @@ body{
     }
     .html-project{
         flex-direction: row;
+        justify-content: space-around;
     }
     .cards{
         width: 41.66%;
     }
 }
+
