--- a/css/style.css
+++ b/css/style.css
@@ -118,12 +118,13 @@ nav hr{
     font-weight: 700;
     text-align: center;
 }
-.sec-heading div{
+.sec-heading span{
+    display: block;
     background-color: #617676;
     height: 3px;
     margin: 4px auto 0;
 }
-.sec-heading div:first-child{
+.sec-heading span:first-child{
     width: 125px;
 }
 /* .sec-heading div:last-child{
@@ -145,7 +146,7 @@ nav hr{
 }
 
 /* skills */
-.skills .sec-heading div:first-child{
+.skills .sec-heading span:first-child{
     width: 80px;
 }
 /* .skills .sec-heading div:last-child{
@@ -172,7 +173,7 @@ nav hr{
 
 
 /* Projects */
-.project .sec-heading div:first-child{
+.project .sec-heading span:first-child{
     width: 114px;
 }
 .html-project{
@@ -187,11 +188,11 @@ nav hr{
     border: 1px solid lightgray;
     border-radius: 5px;
     background-color: var(--extra_3);
-    transition: 0.3s ease-in-out;
+    /* transition: 0.3s ease-in-out; */
 }
-.cards:hover{
+/* .cards:hover{
     box-shadow: 2px 1px 2px 1px rgb(165, 164, 164);
-}
+} */
 .card-img{
     border-bottom: 1px solid lightgray;
 }
@@ -234,7 +235,7 @@ nav hr{
 .contact .contact-image{
     display: none;
 }
-.contact .sec-heading div:first-child{
+.contact .sec-heading span:first-child{
     width: 104px;
 }
 .contact-info{
@@ -268,6 +269,13 @@ nav hr{
 .foot-about{
     color: var(--extra_2);
     font-family: var(--family2);
+}
+.foot-about p:first-child, .foot-nav p:first-child, .foot-contact p:first-child{
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.2rem;
+    color: var(--extra_3);
+    margin-bottom: 1rem;
 }
 .foot-about p{
     line-height: 31px;
@@ -312,7 +320,8 @@ nav hr{
 
 /* 575 size query */
 @media screen and (min-width: 575px) {
-    .sec-heading div:first-child{
+    /* about */
+    .sec-heading span:first-child{
         width: 135px;
     }
     .side1{
@@ -326,7 +335,9 @@ nav hr{
         justify-content: space-around;
         align-items: center;
     }
-    .skills .sec-heading div:first-child {
+
+    /* skills */
+    .skills .sec-heading span:first-child {
         width: 88px;
     }
     .tech{
@@ -342,21 +353,27 @@ nav hr{
     .tech figcaption p{ 
         font-size: 20px;
     }
-    .project .sec-heading div:first-child {
+
+    /* project */
+    .project .sec-heading span:first-child {
         width: 124px;
     }
     .cards{
         width: 66%;
     }
-    .contact .sec-heading div:first-child {
+
+    /* contact */
+    .contact .sec-heading span:first-child {
         width: 115px;
       }
     .contact-info{
         width: 65%;
         margin: 0 auto;
     }
+
+    /* footer */
     .foot-nav{
-        width: 20%;
+        width: 22%;
     }
     .foot-contact{
         width: 50%;
@@ -373,6 +390,7 @@ nav hr{
 
 /* 768 screen size */
 @media screen and (min-width: 768px) {
+    /* navbar */
     .mobile-nav{
         background-color: #344850; 
     }
@@ -380,10 +398,13 @@ nav hr{
         width: 360px !important;
     }
     nav hr{
+        display: block;
         height: 3px;
         background-color: #bfbdae;
         margin: 0;
     }
+
+    /* hero-section */
     .hero-section{
         background: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.4)), url("../images/hero-image.jpg");
         background-size: cover;
@@ -413,15 +434,21 @@ nav hr{
         border-radius: 50%;
         box-shadow: 7px 9px 14px whitesmoke;
     }
+
+    /* about */
     .side1{
         width: 40%;
     }
+
+    /* skills */
     .tech{
         width: 30%;
     }
     .tech img{
         width: 60%;
     }
+
+    /* project */
     .html-project{
         flex-direction: row;
         justify-content: space-around;
@@ -492,6 +519,9 @@ nav hr{
     }
 
     /* about-section */
+    .sec-heading span:first-child{
+        width: 153px;
+    }
     .abt-content{
         display: flex;
         justify-content: space-evenly;
@@ -504,6 +534,9 @@ nav hr{
     }
 
     /* skills */
+    .skills .sec-heading span:first-child{
+        width: 96px;
+    }
     .tech{
         row-gap: 5px;
     }
@@ -512,11 +545,18 @@ nav hr{
     }
 
     /* project */
+    .project .sec-heading span:first-child{
+        width: 142px;
+        margin-top: 7px;
+    }
     .btns a{
         background-color: #4c5b62;
     }
 
     /* contact */
+    .contact .sec-heading span:first-child{
+        width: 129px;
+    }
     .contact .contact-image{
         display: block;
     }
@@ -560,6 +600,8 @@ nav hr{
     .desktop .flexBox{
         width: 80%;
     }
+
+    /* hero-section */
     .hero-section{
         height: 88vh;
     }
@@ -591,6 +633,9 @@ nav hr{
     }
 
     /* about */
+    .sec-heading span:first-child{
+        width: 165px;
+    }
     .abt-content{
         padding: 20px 40px;
     }
@@ -601,6 +646,9 @@ nav hr{
     }
 
     /* skills */
+    .skills .sec-heading span:first-child{
+        width: 105px;
+    }
     .tech-stack .flexBox{
         row-gap: 18px;
     }
@@ -617,6 +665,9 @@ nav hr{
     }
 
     /* project */
+    .project .sec-heading span:first-child{
+        width: 152px;
+    }
     .html-project{
         row-gap: 40px;
     }
@@ -624,5 +675,8 @@ nav hr{
         width: 28.66%;
     }
     
-     
+    /* contact */
+    .contact .sec-heading span:first-child{
+        width: 136px;
+    } 
 }
